[build-system]
requires = ["meson-python", "cython"]
build-backend = "mesonpy"

[project]
name = "sagemath-giac"
version = "0.1.0"
description = "Support for using Giac within SageMath"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["mathematics", "algebra", "calculus", "giac", "xcas"]
license = { file = "COPYING" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/orlitzky/sagemath-giac"
Documentation = "https://github.com/orlitzky/sagemath-giac/blob/master/README.rst"
Repository = "https://github.com/orlitzky/sagemath-giac.git"
Issues = "https://github.com/orlitzky/sagemath-giac/issues"
Changelog = "https://github.com/orlitzky/sagemath-giac/raw/master/NEWS"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
